# Solana-X402-Payment-Protocol

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  LICENSE  QUICKSTART.md  README.md  UPDATE_SUMMARY.md  package.json  tsconfig.json
.github/workflows/: ci.yml  release.yml
client/: example.ts  payment-client.ts
src/: lib.rs
tests/: integration_test.rs
