[package]
name = "solana-x402-payment-protocol"
version = "0.2.0"
edition = "2021"
description = "A secure X402 payment protocol smart contract on Solana"
license = "MIT"
repository = "https://github.com/topsecretagent007/Solana-X402-Payment-Protocol"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "2.0"
borsh = "1.5"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "2.0"
solana-sdk = "2.0"
tokio = { version = "1.40", features = ["full"] }

